fix: corrige nginx.conf para SPA

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,7 @@ server {
     location / {
         root   /usr/share/nginx/html;
         index  index.html;
+        # Esta linha é a correção
         try_files $uri $uri/ /index.html;
     }
 }
